tests/error/inout_errors/nested_call_right_to_left.err
Error: Copy violation (at $FILE:17:22)
   | 
15 | def test(q: qubit @owned) -> tuple[int, qubit]:
16 |     # This doesn't work since arguments are evaluated from left to right
17 |     return foo(q, foo(q, foo(q, 0))), q
   |                       ^ Variable `q` with non-copyable type `qubit` cannot be
   |                         borrowed ...
   | 
17 |     return foo(q, foo(q, foo(q, 0))), q
   |                - since it was already borrowed here

Guppy compilation failed due to 1 previous error
